--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>Away</h3>
                 <div id="guestScore">0</div>
                 <div class="scoreIncrement">
                 <button class="guestScoreInc" onclick="increase_1()">+1</button>
